@@ -7,7 +7,6 @@ Legend:
 Plans for 0.4.0
 ===============
 
-  * "returned error:"
   * Test all timing manipulations
   * Update README and webpage
       - SSA & ASS
